# ultimate-string-library

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
src/: _usl_set_size.c  usl.h  usl_as_str.c  usl_at.c  usl_concat.c  usl_free.c  usl_from.c  usl_from.cc  usl_index_of.c  usl_len.c  usl_len.cc  usl_new.c  usl_substring.c
test/: main.c  main.cc
